--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -8,7 +8,25 @@
   background-color: #ffffff;
   padding: 10px;
   margin-left: 15px;
+  width: 5px;
 }
+input[type] {
+  width: auto;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  line-height: 20px;
+  min-height: 28px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  border: 2px solid transparent;
+  box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
+  background: rgb(251, 251, 251);
+  transition: all 0.1s ease 0s;
+  margin: 8px;
+  margin-top: 1px;
+}
+
+
 
 .date-time-picker:focus {
   outline: none;
