--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -10,48 +10,73 @@
   display: inline-block; /* display items as a block in one line */
   /* background-color: red; */
 }
-.nav_bar li a{
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: 400;
-    transition: all 0.5s ease;
+.nav_bar li a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-weight: 400;
+  transition: all 0.5s ease;
 }
-.nav_bar li a:hover{
-    text-decoration: none;
-    color: rgb(255, 0, 0);
-    font-size: 20px;
-    
-}
-
-.login_button{
-    display: inline-block;
-    outline: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 15px;
-    margin-left: 85px;
-    height: 50px;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 14px 24px;
-    border: none;
-    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
-    background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%);
-    color: #fff;
-}
-.logo{
-    display: inline-block;
-    outline: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 5px;
-    margin-bottom: 9px;
-    margin-right: 25px;
-    height: auto;    /* color: #fff; */
-}
-.logo img{
-    height: 80px;
-    width: auto;
+.nav_bar li a:hover {
+  text-decoration: none;
+  color: rgb(255, 0, 0);
+  font-size: 20px;
 }
 
+.login_button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 15px;
+  margin-left: 85px;
+  height: 50px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 14px 24px;
+  border: none;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: linear-gradient(
+    to right,
+    rgb(230, 30, 77) 0%,
+    rgb(227, 28, 95) 50%,
+    rgb(215, 4, 102) 100%
+  );
+  color: #fff;
+}
+.logo {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 5px;
+  margin-bottom: 9px;
+  margin-right: 25px;
+  height: auto; /* color: #fff; */
+}
+.logo img {
+  height: 80px;
+  width: auto;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 16px;
+  margin-top: 15px;
+  margin-left: 85px;
+  height: auto;
+  width: 600px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 14px 24px;
+  border: 1px solid black;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+  background: white;
+  color: #000000;
+  box-shadow: 10px 5px 60px rgb(255, 0, 0);
+}
