--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -60,23 +60,23 @@
   width: auto;
 }
 
-.login-container {
+.popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  font-size: 16px;
-  margin-top: 15px;
-  margin-left: 85px;
-  height: auto;
-  width: 600px;
-  font-weight: 600;
-  border-radius: 8px;
-  padding: 14px 24px;
-  border: 1px solid black;
-  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
-    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
-  background: white;
-  color: #000000;
-  box-shadow: 10px 5px 60px rgb(255, 0, 0);
+}
+
+.popup {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 10000;
 }
