--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -79,4 +79,11 @@
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 10000;
+
+}
+.button{
+  background-color: white;
+  border: none;
+  font-size: 20px;
+  float: right;
 }
