--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -1,9 +1,11 @@
+.banner-image{
+  max-width: 100%;
+    /* border: 2px solid rgb(255, 0, 0); */
 
+}
 .display-part{
-  margin-top: 2px;
-  /* border: 2px solid rgb(255, 0, 0); */
-  height: 250px;
   display: flex;
   justify-content: center;
-  text-align: center;
+  text-align: center; 
+  background-color: rgb(255, 255, 255);
 }
