--- a/src/component/css/bike.css
+++ b/src/component/css/bike.css
@@ -76,8 +76,9 @@ input[type] {
   justify-content: center;
   text-align: center;
   padding: 30px;
+  padding-top: 39px;
   height: 6vh;
-  width: 120vh;
+  width: 100vh;
   border: 2px solid black;
   border-radius: 50px;
   position: absolute;
@@ -121,13 +122,9 @@ input[type] {
 .bike-dashboard-heading{
   background-color: rgb(0, 0, 0);
   color: white;
-  display: flex; /* display items in a row */
+  text-align: center;
   justify-content: center;
   border: 2px solid black;
-  /* box-shadow:0px 0px 16px 26px rgba(0, 0, 0, 0.233);
-   */
-  box-shadow: 8px -31px 22px -2px rgba(0, 0, 0, 0.233);
-
 }
 .bike-Dashboard {
   margin-top: 400px;
