--- a/src/component/css/login.css
+++ b/src/component/css/login.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70vh;
+  width: 40vh;
+  text-align: center;
 }
 
 .form-group {
@@ -11,23 +12,30 @@
   align-items: center;
 }
 
-/* label {
-    text-align: center;
-} */
-
-.input-field {
-  width: 300px;
-  padding: 10px;
+.form-group1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+}
+.form-group1 input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 40px;
+  width: 310px;
+  border:2px solid black;
+  border-radius: 12px;
+  text-align: center;
   font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-bottom: 10px;
+  
 }
 
-.input-field:focus {
+
+.form-group1 input:focus {
   outline: none;
-  border-color: #007bff;
+  border:3px solid #000000;
+
 }
 
 .heading {
@@ -38,14 +46,16 @@
 }
 
 .login_signup_button {
+  margin-top: 20px;
+  width: 165px;
+  height: 45px;
   display: inline-block;
   outline: 0;
   border: 0;
   cursor: pointer;
   font-weight: 600;
-  color: #fff;
-  font-size: 14px;
-  height: 38px;
+  color: #fffefe;
+  font-size: 16px;
   padding: 8px 24px;
   border-radius: 50px;
   background-image: linear-gradient(180deg, #7c8aff, #3c4fe0);
