--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -14,7 +14,7 @@
   text-decoration: none;
   color: black;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 700;
   transition: all 0.5s ease;
 }
 .nav_bar li a:hover {
@@ -37,14 +37,10 @@
   border: none;
   transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
     -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
-  background: linear-gradient(
-    to right,
-    rgb(230, 30, 77) 0%,
-    rgb(227, 28, 95) 50%,
-    rgb(215, 4, 102) 100%
-  );
+  background-color: black;
   color: #fff;
 }
+
 .logo {
   display: inline-block;
   outline: none;
