--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -85,3 +85,24 @@
   font-size: 20px;
   float: right;
 }
+
+
+.pop-window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+  backdrop-filter: blur(5px); /* Apply backdrop blur effect */
+}
+
+.popup-content {
+  /* Styles for the popup content */
+  background-color: #fff;
+  padding: 20px;
+}
