--- a/src/component/css/login.css
+++ b/src/component/css/login.css
@@ -1,100 +1,49 @@
-.form_wraper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40vh;
-  text-align: center;
+.formm{
+  /* background-color: blue; */
+  padding: 25px;
 }
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.form-group1{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.formm input{
   margin: 5px;
-}
-.form-group1 input {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 40px;
-  width: 310px;
-  border:2px solid black;
-  border-radius: 12px;
+  width: 230px;
+  padding: 10px;
   text-align: center;
-  font-size: 16px;
-  
-}
-
-
-.form-group1 input:focus {
-  outline: none;
-  border:3px solid #000000;
-
-}
-
-.heading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.login_signup_button {
-  margin-top: 20px;
-  width: 165px;
-  height: 45px;
-  display: inline-block;
-  outline: 0;
-  border: 0;
-  cursor: pointer;
+  font-size: 15px;
   font-weight: 600;
-  color: #fffefe;
-  font-size: 16px;
-  padding: 8px 24px;
-  border-radius: 50px;
-  background-image: linear-gradient(180deg, #7c8aff, #3c4fe0);
-  box-shadow: 0 4px 11px 0 rgba(37, 44, 97, 0.15),
-    0 1px 3px 0 rgba(93, 100, 148, 0.2);
-  transition: all 0.2s ease-out;
+  border: 2px solid black;
+  border-radius: 13px;
 }
-
-.login_signup_button:hover {
-  box-shadow: 0 8px 22px 0 rgba(37, 44, 97, 0.15),
-    0 4px 6px 0 rgba(93, 100, 148, 0.2);
+.formm input:hover{
+  border: 3px solid rgb(0, 0, 0);
 }
-
-.option_button {
-  display: inline-block;
-  outline: none;
-  cursor: pointer;
-  font-size: 14px;
-  padding: 0 12px;
-  line-height: 20px;
-  height: 30px;
-  max-height: 30px;
-  background: none;
-  font-weight: 700;
-  border: 0;
-  border-radius: 0;
-  color: #236800;
-  transition-timing-function: ease-in-out;
-  transition-property: background;
-  transition-duration: 150ms;
-  box-shadow: none;
-}
-
-.option_button:hover {
-  background: #ffffff;
-}
-
-.error_msg {
-  margin-top: -15px;
-  /* transition: all 110.2s ease-out; */
+.error-message{
   color: red;
+}
+
+.submit-button{
+  width: 150px;
+  padding: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  margin-top: 15px;
+  border-radius: 50px;
+  background-color: black;
+  color:white;
+}
+.submit-button:hover{
+  width: 150px;
+  padding: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  margin-top: 15px;
+  border-radius: 50px;
+  background-color: rgb(255, 255, 255);
+  color:rgb(0, 0, 0);
+}
+
+.form-switch{
+  background-color: rgb(255, 255, 255);
+  color:rgb(0, 0, 0);
+  padding: 5px;
+  border-radius: 10px;
+  margin-left: 3px;
 }
