--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -70,13 +70,14 @@
 }
 
 .popup {
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 10000;
   border: 3px solid rgb(0, 0, 0);
   border-radius: 35px;
+  width: 50vh;
 
 }
 .button{
