--- a/src/component/css/login.css
+++ b/src/component/css/login.css
@@ -17,6 +17,13 @@
 }
 .error-message{
   color: red;
+  font-size: 15px;
+  font-weight: 600;
+}
+.success-message{
+  color: rgb(7, 130, 7);
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .submit-button{
