--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -1,30 +1,33 @@
+body{
+  max-width: auto;
+  justify-content: center;
+  text-align: center;
+  overflow: hidden;
+}
 .home-body {
-  /* background-color: red; */
   max-width: 100%;
-  /* display: flex; */
   justify-content: center;
   text-align: center;
 }
-.banner-image {
-  /* border: 2px solid rgb(255, 0, 0); */
-  max-width: 100%;
 
+.banner-image {
+  max-width: 100%;
 }
-.display-part{
-  width: 130vh;
-  margin-top: 350px;
-  height: 500px;
+
+.display-part {
+  margin-top: 50px;
+  height: 300px;
   display: flex;
   justify-content: center;
   text-align: center;
   background-color: rgb(0, 0, 0);
-  border-radius: 400px;
+  border-radius: 50%;
   overflow: hidden;
-  /* box-shadow: 0 0 10px rgba(0,0,0,0.5); */
-  box-shadow: 0px 6px 39px rgba(0,0,33,61.5);
+  box-shadow: 0px 6px 39px rgba(0, 0, 33, 61.5);
 }
-.display{
-  margin-top: -300px;
+
+.display {
+  margin-top: -200px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -32,39 +35,75 @@
   background-color: rgb(255, 255, 255);
 }
 
-.image-home{
-  height: 70vh;
-  width: 180vh;
+.image-home {
+  height: 50vh;
+  width: 100%;
 }
 
-.runing-news{
+.runing-news {
   background-color: rgb(0, 0, 0);
   height: 55px;
   padding: 5px;
+  justify-content: center;
   align-items: center;
   display: flex;
-
+  width: 100%;
 }
-
 
 .runing-news p {
   position: absolute;
   white-space: nowrap;
-  width: auto;
-  animation: running-text 20s linear infinite;
+  width: 100%;
+  animation: running-text 25s linear infinite;
 }
 
 @keyframes running-text {
   0% {
-    transform: translateX(auto);
+    transform: translateX(100%);
   }
   100% {
     transform: translateX(-100%);
   }
 }
 
-.news{
+.news {
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 700;
+  width: 100%;
+}
+.space{
+  margin-left: 30px;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 768px) {
+  .display-part {
+    margin-top: 20px;
+    height: 200px;
+  }
+
+  .image-home {
+    height: 30vh;
+  }
+
+  .news {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  .display-part {
+    margin-top: 10px;
+    height: 150px;
+  }
+
+  .image-home {
+    height: 20vh;
+  }
+
+  .news {
+    font-size: 14px;
+  }
 }
