--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -27,7 +27,7 @@
 .dashboard {
     display: flex;
     height: 100vh;
-    background-color: #565836;
+    background-color: #eae4e4;
 
   }
   
@@ -45,7 +45,7 @@
     padding: 0;
     margin: 0;
     color: #ffffff;
-    margin-top: 150px;
+    margin-top: 120px;
   }
   
   .sidebar-item {
