--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -1,70 +1,122 @@
 .card {
-    margin-top: -19px;
-    width: 250px; /* Adjust the width and height as needed */
-    height: 250px;
-    border-radius: 50%;
-    background-color: #f1f1f1; /* Set the desired background color */
-    margin-left: 120px;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .icon {
-    width: 250px; /* Adjust the width and height as needed */
-    height: 250px;
-    border-radius: 50%;
-  }
+  margin-top: -19px;
+  width: 250px; /* Adjust the width and height as needed */
+  height: 250px;
+  border-radius: 50%;
+  background-color: #f1f1f1; /* Set the desired background color */
+  margin-left: 120px;
+  justify-content: center;
+  align-items: center;
+}
 
-.User-Name{
-    padding: 15px;
-    margin-top: 35px;
-    font-size: 30px;
-    font-weight: 900;
-    background-color: #f1f1f1; /* Set the desired background color */
+.icon {
+  width: 250px; /* Adjust the width and height as needed */
+  height: 250px;
+  border-radius: 50%;
+}
 
-}  
-  
+.User-Name {
+  padding: 15px;
+  margin-top: 35px;
+  font-size: 30px;
+  font-weight: 900;
+  background-color: #f1f1f1; /* Set the desired background color */
+}
+
 .dashboard {
-    display: flex;
-    height: 100vh;
-    background-color: #eae4e4;
+  display: flex;
+  height: 100vh;
+  background-color: #eae4e4;
+}
 
-  }
-  
-  .sidebar {
-    width: 250px;
-    background-color: #000000;
-    justify-content: center;
-    align-items: center;
+.sidebar {
+  width: 250px;
+  background-color: #000000;
+  justify-content: center;
+  align-items: center;
+}
 
-  }
- 
-  
-  .sidebar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    color: #ffffff;
-    margin-top: 120px;
-  }
-  
-  .sidebar-item {
-    margin-top: 30px;
-    padding: 10px;
-  }
-  
-  .sidebar-link {
-    text-decoration: none;
-    color: #ffffff;
-  }
-  
+.sidebar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: #ffffff;
+  margin-top: 10px;
+}
 
-  
- 
-  
- 
- 
-.db-body{
-    background-color: red;
-    margin-left: 50px;
+.sidebar-item {
+  margin-top: 30px;
+  padding: 10px;
+}
+
+.sidebar-link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.db-body {
+  background-color: red;
+  margin-left: 50px;
+}
+
+.profile {
+  border: 2px solid black;
+  padding: 1px;
+  height: 200px;
+  width: 114%;
+  background-color: red;
+  /* margin-left: 90px; */
+}
+
+/* profile conatine  */
+
+.container {
+  background-color: #f1f1f1;
+  /* padding-top: 4rem;
+  padding-left: 4rem; */
+  margin-top: 23px;
+  margin-left: 70px;
+
+  justify-content: center;
+  align-items: center;
+}
+.container1 {
+  /* background-color: #f1f1f1; */
+  margin-top: -3px;
+  margin-left: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.coupon {
+  height: 200px;
+  width: 400px;
+  left: 0px;
+  top: 0px;
+  border-radius: 40px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.45);
+  background-color: #f1f1f1;
+  overflow: hidden;
+
+
+}
+
+.union {
+  height: 11.961060523986816px;
+  width: 350px;
+  left: -1.5px;
+  top: 74.5194091796875px;
+  border-radius: 0px;
+}
+
+.polygon-left {
+  position: absolute;
+  width: 17px;
+  height: 10px;
+  left: 6px;
+  top: calc(50% - 10px / 2 + 13.5px);
+
+  background: #ffffff;
+  border-radius: 1px;
+  transform: matrix(0, -1, -1, 0, 0, 0);
 }
