--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -42,7 +42,7 @@
   padding: 0;
   margin: 0;
   color: #ffffff;
-  margin-top: -470px;
+  margin-top: 100px;
 }
 
 .sidebar-item {
@@ -176,7 +176,7 @@
   margin-left: 120px;
   justify-content: center;
   align-items: center;
-  height: 800px;
+  height: 860px;
   width: 800px;
   left: 0px;
   top: 0px;
@@ -286,4 +286,12 @@
 
 .main-content.hidden {
   display: none;
+}
+
+.side-nav-button{
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 25px;
+  font-weight: 700;
 }
