--- a/src/component/css/usercard.css
+++ b/src/component/css/usercard.css
@@ -56,8 +56,8 @@
   font-weight: 700;
   margin-top: 15px;
   margin-left: -2px;
-  color: black;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  color: white;
+  text-shadow: 2px 3px 7px rgba(0, 0, 0, 1.5);
 }
 .name-card2 {
   font-size: 24px;
