--- a/src/component/css/usercard.css
+++ b/src/component/css/usercard.css
@@ -15,7 +15,7 @@
 .user-front{
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(45deg, #0045c7, #ff2c7d);
+    background-image: linear-gradient(45deg, #0c0c0c, #565052);
     position: absolute;
     top: 0;
     left: 0;
