--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -209,7 +209,7 @@
   border: 2px solid black;
   border-radius: 40px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.45);
-  background-color: #42b86f;
+  background-color: #ffffff;
   color: white;
   overflow: hidden;
 }
