--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -107,3 +107,35 @@ body{
     font-size: 14px;
   }
 }
+
+/* card on left on home page  */
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card {
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin-right: 20px;
+  flex: 0 0 300px;
+}
+
+.content {
+  flex: 1;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .card {
+    margin-right: 0;
+    margin-bottom: 20px;
+    flex: 1;
+  }
+}
