--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -116,3 +116,19 @@
   font-weight: 800;
   float: right;
 }
+
+@media (max-width: 768px) {
+  .nav_bar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .login_button {
+    margin-top: 15px;
+    margin-left: 0;
+  }
+
+  .logo {
+    margin-right: 0;
+  }
+}
