--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -1,123 +1,19 @@
-body{
+body {
   max-width: auto;
   justify-content: center;
   text-align: center;
   overflow: hidden;
 }
-.home-body {
-  max-width: 100%;
-  justify-content: center;
-  text-align: center;
-}
-
-.banner-image {
-  max-width: 100%;
-}
-
-.display-part {
-  margin-top: 50px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  background-color: rgb(0, 0, 0);
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0px 6px 39px rgba(0, 0, 33, 61.5);
-}
-
-.display {
-  margin-top: -200px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  background-color: rgb(255, 255, 255);
-}
-
-.image-home {
-  height: 50vh;
-  width: 100%;
-}
-
-.runing-news {
-  background-color: rgb(0, 0, 0);
-  height: 55px;
-  padding: 5px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  width: 100%;
-}
-
-.runing-news p {
-  position: absolute;
-  white-space: nowrap;
-  width: 100%;
-  animation: running-text 25s linear infinite;
-}
-
-@keyframes running-text {
-  0% {
-    transform: translateX(100%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-.news {
-  color: white;
-  font-size: 20px;
-  font-weight: 700;
-  width: 100%;
-}
-.space{
-  margin-left: 30px;
-}
-
-/* Responsive Styles */
-
-@media (max-width: 768px) {
-  .display-part {
-    margin-top: 20px;
-    height: 200px;
-  }
-
-  .image-home {
-    height: 30vh;
-  }
-
-  .news {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 480px) {
-  .display-part {
-    margin-top: 10px;
-    height: 150px;
-  }
-
-  .image-home {
-    height: 20vh;
-  }
-
-  .news {
-    font-size: 14px;
-  }
-}
-
-/* card on left on home page  */
 
 .container {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .card {
-  background-color: #f0f0f0;
+  background-color: #ff0000;
+  color: black;
   padding: 20px;
   margin-right: 20px;
   flex: 0 0 300px;
@@ -127,13 +23,51 @@ body{
   flex: 1;
 }
 
-/* Responsive Styles */
+.card-right {
+  background-color: #15c36c;
+  padding: 20px;
+  margin-top: 20px;
+  flex: 0 0 300px;
+}
+
+.content-right {
+  margin-top: 20px;
+}
+
+.home-body,
+.home-body-right {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.image-home {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
+    align-items: center;
   }
 
-  .card {
+  .card,
+  .card-right {
+    margin-right: 0;
+    margin-bottom: 20px;
+    flex: 1;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card,
+  .card-right {
     margin-right: 0;
     margin-bottom: 20px;
     flex: 1;
