--- a/src/component/css/home.css
+++ b/src/component/css/home.css
@@ -5,37 +5,32 @@ body {
   overflow: hidden;
 }
 
-.container {
-  display: flex;
+.home-body-conatainer {
+  display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  height: 35vh;
+  background-color: rgb(0, 0, 0);
+  /* box-shadow: 3px 10px 19px 4px blue ; */
 }
 
-.card {
-  background-color: #ff0000;
-  color: black;
-  padding: 20px;
-  margin-right: 20px;
+.home-body-card {
+  margin: 190px 0px 0px 100px  ;
   flex: 0 0 300px;
+  height: 360px;
+  border-radius: 140px;
 }
 
-.content {
-  flex: 1;
+.home-body-content {
+  border-radius: 50px;
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+  background-color: rgb(255, 255, 255);
+  margin-top: -20px;
+  height: 570px;
+  /* width: 300px;  */
 }
 
-.card-right {
-  background-color: #15c36c;
-  padding: 20px;
-  margin-top: 20px;
-  flex: 0 0 300px;
-}
-
-.content-right {
-  margin-top: 20px;
-}
-
-.home-body,
-.home-body-right {
+.home-body {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -47,28 +42,14 @@ body {
 }
 
 @media (max-width: 768px) {
-  .container {
+  .home-body-container {
     flex-direction: column;
     align-items: center;
   }
 
-  .card,
-  .card-right {
-    margin-right: 0;
-    margin-bottom: 20px;
-    flex: 1;
-  }
-}
-
-@media (max-width: 480px) {
-  .container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card,
-  .card-right {
-    margin-right: 0;
+  .home-body-card {
+    margin-right: 100px;
+    margin-left:60px;
     margin-bottom: 20px;
     flex: 1;
   }
