--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -3,7 +3,7 @@
   /* background-color: rgba(170, 91, 91, 0.342); */
   margin: 0;
   padding: 0;
-  height: 91.8vh;
+  height: 100%;
   display: flex;
 }
 .side-nav-profile{
@@ -24,16 +24,37 @@
   
 }
 .side-nav-dashboard{
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   width: 290px;
+  height:91.8vh;
+}
+@supports not (height: fit-content) {
+  .side-nav-dashboard {
+    height: auto; /* Fallback to auto height */
+  }
 }
 .dashboard-image-card{
   height: 170px;
   width: 170px;
   background-color: white;
-  border-radius: 50px;
+  border-radius: 80px;
   box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+}
+.dashboard-image-card img{
+  height: 170px;
+  width: 170px;
+  border-radius: 80px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 
 }
 .dashboard-screnn ul {
@@ -63,18 +84,22 @@
 
 }
 .dashboard-screnn button:hover {
-  padding: 15px 20px;
-  width: 370px;
+  /* padding-left: 400px; */
+  /* width: 500px 470px; */
   background-color: #ffffff;
   color: rgb(0, 0, 0);
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 900;
   border: 1px solid rgb(255, 0, 0);
   border-radius: 30px;
   transition: 0.6s;
+}
+.User-name{
+  font-size: 25px;
+  font-weight:700 ;
 }
 
 @media (max-width: 730px) {
@@ -92,4 +117,25 @@
   .side-nav-dashboard {
     width: 100%;
   }
+}
+
+.main-content{
+  background-color: #2bff0000;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width:100%;
+  padding:0px 62px 0px 62px;
+  overflow: hidden;
+}
+.main-content.hidden {
+  display: none;
+
+}
+.profile-screen{
+  /* background-color: rgba(255, 24, 24, 0.961); */
+  width:100%;
+  height: 100%;
 }
