--- a/src/component/css/dashboard.css
+++ b/src/component/css/dashboard.css
@@ -69,7 +69,7 @@
 
 }
 
-.dashboard-screnn button {
+.side-nav-option {
   padding: 15px 20px;
   width: 170px;
   background-color: #000000;
@@ -83,7 +83,7 @@
   transition: 0.6s;
 
 }
-.dashboard-screnn button:hover {
+.side-nav-option:hover {
   /* padding-left: 400px; */
   /* width: 500px 470px; */
   background-color: #ffffff;
