--- a/src/component/css/profile.css
+++ b/src/component/css/profile.css
@@ -77,3 +77,14 @@
 .Personal-content-left table td tr{
     font-size: 23px;
 }
+
+.show-password{
+  background-color: rgba(255, 255, 255, 0);
+  margin-top: 30px;
+  margin-left: 20px;
+  border: none;
+}
+
+.monkey-emoji img{
+  height: 50px;
+}
