--- a/src/component/css/transaction.css
+++ b/src/component/css/transaction.css
@@ -1,15 +1,91 @@
-.Passbook h3{
-    margin-top: 20px;
+.transaction-heading {
+  background-color: black;
+  color: white;
+  padding: 0.1px;
+  border-radius: 0px 0px 40px 40px;
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+}
+.transaction-heading-name {
+  font-size: 30px;
 }
 
-.left-data{
-    float: left;
-    margin-top: -20px;
-    margin-left: 50px;
+@media (max-width: 768px) {
+  .transaction-heading {
+    border-radius: 0;
+  }
 
+  .transaction-heading-name {
+    font-size: 24px;
+  }
 }
-.right-data{
+
+.transaction-body {
+  margin: 10px 0px 0px 0px;
+  border: 2px solid black;
+  background-color: aqua;
+  padding: 0px 40px 0px 40px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* text-align: center; */
+}
+.transaction-detail-right {
+  display: flex;
+  float: right;
+  height: 22%;
+  width: 100%;
+  background-color: rgb(30, 255, 0);
+  padding: 0px 10px 0px 10px;
+  overflow: hidden;
+  margin-top: -130px;
+}
+.transaction-Personal-content-right {
+  margin: 15px 90px 10px 90px;
+  border: 2px solid black;
+  border-radius: 35px;
+  height: 150px;
+  width: 350px;
+  float: right;
+  background-color: rgb(255, 213, 0);
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+}
+
+.transaction-Personal-detail-left {
+  /* flex-direction: column; */
+  display: flex;
+  float: left;
+  height: 1%;
+  background-color: rgb(255, 0, 238);
+}
+
+.transaction-Personal-content-left {
+  margin: 90px 0px 20px 0px;
+  border: 2px solid black;
+  border-radius: 35px;
+  height: 250px;
+  width: 550px;
+  float: left;
+  /* background-color: rgb(43, 0, 255); */
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+}
+.transaction-detail-down{
+    margin-top: 90px;
+    border: 2px solid black;
+    border-radius: 35px;
+    height: 470px;
+    width: 1450px;
     float: right;
-    margin-top: -20px;
-    margin-right: 50px;
+    background-color: rgb(255, 213, 0);
+    box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+    overflow-y: auto; 
+    /* max-height: 200px; */
 }
+.transaction-detail-down::-webkit-scrollbar {
+    width: 0em; /* Adjust the width as needed */
+    background-color: #F5F5F5; /* Set the background color of the scrollbar */
+}
+
