--- a/src/component/css/transaction.css
+++ b/src/component/css/transaction.css
@@ -21,8 +21,8 @@
 
 .transaction-body {
   margin: 10px 0px 0px 0px;
-  border: 2px solid black;
-  background-color: aqua;
+  /* border: 2px solid black; */
+  /* background-color: aqua; */
   padding: 0px 40px 0px 40px;
   display: flex;
   flex-direction: column;
@@ -38,20 +38,20 @@
   float: right;
   height: 22%;
   width: 100%;
-  background-color: rgb(30, 255, 0);
+  /* background-color: rgb(30, 255, 0); */
   padding: 0px 10px 0px 10px;
   overflow: hidden;
   margin-top: -130px;
 }
 .transaction-Personal-content-right {
-  margin: 15px 90px 10px 90px;
+  margin: 27px 90px 10px 90px;
   border: 2px solid black;
   border-radius: 35px;
   height: 150px;
   width: 350px;
   float: right;
-  background-color: rgb(255, 213, 0);
-  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+  /* background-color: rgb(255, 213, 0); */
+  /* box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2); */
 }
 
 .transaction-Personal-detail-left {
@@ -72,20 +72,101 @@
   /* background-color: rgb(43, 0, 255); */
   box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
 }
-.transaction-detail-down{
-    margin-top: 90px;
-    border: 2px solid black;
-    border-radius: 35px;
-    height: 470px;
-    width: 1450px;
-    float: right;
-    background-color: rgb(255, 213, 0);
-    box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
-    overflow-y: auto; 
-    /* max-height: 200px; */
+.transaction-detail-down {
+  margin-top: 90px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid black;
+  border-radius: 35px;
+  height: 470px;
+  width: 1450px;
+  float: right;
+  /* background-color: rgb(255, 213, 0); */
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+  overflow-y: auto;
+  /* max-height: 200px; */
 }
 .transaction-detail-down::-webkit-scrollbar {
-    width: 0em; /* Adjust the width as needed */
-    background-color: #F5F5F5; /* Set the background color of the scrollbar */
+  width: 0em; /* Adjust the width as needed */
+  background-color: #f5f5f5; /* Set the background color of the scrollbar */
 }
-
+.scroll-heading {
+  background-color: black;
+  color: white;
+  margin-top: 30px;
+  margin-bottom: -100px;
+  padding: 10px;
+  width: 99%;
+  border-radius: 40px 40px 0px 0px;
+  box-shadow: 3px 10px 19px 4px rgba(10, 10, 245, 0.2);
+}
+.transaction-card-heading-box {
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.transaction-card-heading-10 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: -20px;
+  }
+  .transaction-card-heading-20 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 150px;
+  }
+  .transaction-card-heading-30 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 160px;
+   
+  }
+  .transaction-card-heading-40 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 190px;
+  }
+  .transaction-card-heading-50 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 230px;
+  }
+.transaction-card-heading-1 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 80px;
+}
+.transaction-card-heading-2 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 120px;
+}
+.transaction-card-heading-3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 160px;
+ 
+}
+.transaction-card-heading-4 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 190px;
+}
+.transaction-card-heading-5 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 230px;
+}
+.transaction-card {
+  border: 1px solid black;
+  border-radius: 40px 40px 40px 40px;
+  margin-top: 20px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  text-align: center;
+  /* background-color: red; */
+}
