--- a/src/component/css/nav.css
+++ b/src/component/css/nav.css
@@ -89,6 +89,17 @@
   width: 50vh;
 
 }
+.BenifercyPopup-popup {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 10000;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 35px;
+  height:50vh;
+  width: 90vh;
+}
 .button{
   background-color: white;
   border: none;
@@ -113,6 +124,10 @@
 
 .popup-content {
   padding: 20px;
+  text-align: center;
+}
+.BenifercyPopup-popup-content{
+  padding-top: 10px;
   text-align: center;
 }
 
